# mrs-build

./: LICENSE  README.md  pyproject.toml
.github/workflows/: test.yaml
examples/editors/vs-code/: README.md  tasks.json
src/mrs_build/: common_args.py  main.py
src/mrs_build/commands/: __init__.py  build.py  command.py  generate_shell_completions.py  init.py  list.py  test.py
src/mrs_build/common/: cache.py  cli_args.py  errors.py  logger.py  search_up.py  utils.py  workspace.py
src/mrs_build/settings/: settings.py
